--- a/css/styles.css
+++ b/css/styles.css
@@ -7,56 +7,57 @@ body{
     background: #fff;
     }
 
-.logo1{
+.logof{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
     text-decoration: none;
 }
 
-.logo2:hover, .logo1:hover{color: #404bbf;}
+.logot:hover, .logof:hover, .logofoot:hover {color: #404bbf;}
 
-.logo2:active, .logo1:active{ 
+.logot:active, .logof:active, .logofoot:active{ 
     color: #404bbf; 
     text-decoration: underline;}
 
-.logo2 {
+.logot {
     color: #2e2f42;
 }
 
-.menu-links .studio, .menu-links .portfolio, .menu-links .contacts{
+.menu-links .link{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     color: #2e2f42;
     text-decoration: none;
 }
-.menu-links .studio:hover, .menu-links .portfolio:hover, .menu-links .contacts:hover{color: #404bbf;}
-.menu-links .studio:active{
+.menu-links .link:hover{color: #404bbf;}
+.menu-links .link:active, .menu-links .link:focus{
     color: #404bbf;
     text-decoration: underline;
 }
 
 
-.contacts-links .link{
+.cont-links .link{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     color: #434455;
     text-decoration: none;
+    font-style: normal;
 }
-.contacts-links .link:hover{color: #404bbf;}
+.cont-links .link:hover, .cont-links .link:focus{color: #404bbf;}
 
 h1{
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     text-align: center;
-    color: #fff;
+    color: #ffffff;
     background: #2e2f42;
 }
 
@@ -65,17 +66,18 @@ h1{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
 }
-.start-scr-btn:hover{background: #404bbf;}
+.start-scr-btn:hover, .start-scr-btn:focus{background: #404bbf;}
 
 h2{font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .eff-sol .solution{
@@ -87,8 +89,11 @@ h2{font-weight: 700;
 
 .eff-sol .text{
     font-size: 16px;
-   }
+}
 
+.sec-team {
+    background-color: #F4F4FD;
+}
 .team-list .name{
     font-weight: 500;
     font-size: 20px;
@@ -100,6 +105,10 @@ h2{font-weight: 700;
 .team-list .descr{
     font-size: 16px;
     text-align: center;
+}
+
+.team-list .fon-team {
+    background-color: #FFFFFF;
 }
 
 .portfolio .name{
@@ -119,3 +128,9 @@ h2{font-weight: 700;
         color: #f4f4fd;
         background: #2e2f42;
 }
+
+
+.foot-fon{
+    background-color:#2e2f42;
+}
+.logofoot{color: #f4f4fd;}
