--- a/css/styles.css
+++ b/css/styles.css
@@ -78,14 +78,13 @@ body{
 }
 .start-scr-btn:hover, .start-scr-btn:focus{background: #404bbf;}
 
-h2{font-weight: 700;
+.second-title{font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    letter-spacing: 0.02em;
-}
+    }
 
 .eff-sol .solution{
     font-weight: 500;
