--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ body{
     line-height: 1.2;
     text-align: center;
     color: #2e2f42;
+    letter-spacing: 0.02em;
 }
 
 .team-list .descr{
@@ -123,6 +124,7 @@ body{
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
+    letter-spacing: 0.02em;
     }
 
 .portfolio .descr{
