--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ body{
     line-height: 1.07;
     text-align: center;
     color: #ffffff;
+    letter-spacing: 0.02em;
   
 }
 
@@ -92,6 +93,7 @@ body{
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
+    letter-spacing: 0.02em;
 }
 
 .eff-sol .text{
